--- a/.codegenie/app.yml
+++ b/.codegenie/app.yml
@@ -4,11 +4,14 @@ description: Curious Crowd
 x-codeGenie:
   region: us-west-2
   permissionModel: Global
-  defaultAuthRoute: /posts
+  defaultAuthRoute: /expenses
   entities:
     - user
     - post
     - comment
+    - expense
+    # - category
+    - note
     # - commentUpvote
     # - postUpvote
 definitions:
@@ -18,6 +21,12 @@ definitions:
     $ref: ./entities/post.yml
   comment:
     $ref: ./entities/comment.yml
+  expense:
+    $ref: ./entities/expense.yml
+  note:
+    $ref: ./entities/note.yml
+  # category:
+  #   $ref: ./entities/category.yml
   # postUpvote:
   #   $ref: ./entities/post-upvote.yml
   # commentUpvote:
