change app to be for expenses

--- a/.codegenie/entities/expense.yml
+++ b/.codegenie/entities/expense.yml
@@ -6,8 +6,8 @@ x-codeGenie:
   dynamodb:
     globalSecondaryIndexes:
       - name: Created
-        partitionKey: _et
-        sortKey: _ct
+        partitionKey: _ex
+        sortKey: _et
       # - name: Upvotes
       #   partitionKey: entity
       #   sortKey: upvotes
