--- a/packages/api/.env.development
+++ b/packages/api/.env.development
@@ -3,3 +3,5 @@ NODE_ENV=development
 USER_TABLE="CuriousCrowd-development-UserTableD3CD785F-1WDLWKMADOQNG"
 POST_TABLE="CuriousCrowd-development-PostTable22E4A31B-19HA5X1F79NCN"
 COMMENT_TABLE="CuriousCrowd-development-CommentTableCE1DEE4A-855TRAP12MY2"
+EXPENSE_TABLE="CuriousCrowd-development-ExpenseTableDE4A29FC-1UD44590AT21U"
+NOTE_TABLE="CuriousCrowd-development-NoteTableAB73D8B6-1XN62R2LJNBGS"
