--- a/packages/api/.env.development
+++ b/packages/api/.env.development
@@ -1,7 +1,6 @@
 # WARNING: This file is committed to source control. Store secrets in .env.development.local instead of here.
 NODE_ENV=development
 USER_TABLE="CuriousCrowd-development-UserTableD3CD785F-1WDLWKMADOQNG"
-POST_TABLE="CuriousCrowd-development-PostTable22E4A31B-19HA5X1F79NCN"
-COMMENT_TABLE="CuriousCrowd-development-CommentTableCE1DEE4A-855TRAP12MY2"
 EXPENSE_TABLE="CuriousCrowd-development-ExpenseTableDE4A29FC-1UD44590AT21U"
+INCOME_TABLE="CuriousCrowd-development-IncomeTable36B77754-13YK1QQ3F4PUL"
 NOTE_TABLE="CuriousCrowd-development-NoteTableAB73D8B6-1XN62R2LJNBGS"
